--- a/ProjectDrill.CSharp.csproj
+++ b/ProjectDrill.CSharp.csproj
@@ -82,8 +82,9 @@
     <Compile Include="Assets\Demigiant\DOTween\Examples\Sequences.cs" />
     <Compile Include="Assets\Scripts\AsteroidCollision.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\Enemy_Behavior_1.cs" />
+    <Compile Include="Assets\Scripts\Enemy_Forward_1.cs" />
     <Compile Include="Assets\Scripts\Eraser.cs" />
-    <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\ParticleSystemAutoDestroy.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ProceduralField.cs" />
